--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
     "bad-words": "^3.0.3",
     "express": "^4.17.1",
     "socket.io": "^2.2.0",
-   }
+    "socketio-file-upload": "^0.7.0"
+  }
 }
